--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+*{
+	margin:0;
+	padding:0;
+}
+.container{
+	background-color: rgb(68,68,68);
+	color: white;
+	border-radius: 2%;
+	width: 100%;
+}
+header{
+	align-content: center;
+	text-align: center;
+	font-size: 20px;
+	padding:10px;
+	position: relative;
+	top: 20px;
+}
+.row{
+	display: flex;
+	justify-content: center;
+}
+img{
+	width: 28%;
+	padding: 15px;
+	border-radius: 15%;
+}	
+.photos{
+	padding:15px;
+}
