--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,19 @@
 /*  your css code here. If applicable */
 *{
-	margin:0;
-	padding:0;
+margin: 0;
 }
 .container{
 	background-color: rgb(68,68,68);
 	color: white;
 	border-radius: 2%;
-	width: 100%;
+	width: 70%;
+ 
 }
 header{
-	align-content: center;
+  padding:20px;
 	text-align: center;
-	font-size: 20px;
-	padding:10px;
-	position: relative;
-	top: 20px;
+	font-size: 100%;
+ 
 }
 .row{
 	display: flex;
@@ -26,6 +24,6 @@ img{
 	padding: 15px;
 	border-radius: 15%;
 }	
-.photos{
+.animal-photos{
 	padding:15px;
 }
